--- a/Teaching.html
+++ b/Teaching.html
@@ -15,13 +15,13 @@
 <div class="menu-item"><a href="index.html">home</a></div>
 <div class="menu-item"><a href="bio.html">Biography</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
-<div class="menu-item"><a href="Teaching.html" class="current">Teaching</a></div>
+<div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
 </td>
 <td id="layout-content">
 <p>Teaching</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-09-27 14:09:11 MDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-09-27 14:56:27 MDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
