--- a/research.html
+++ b/research.html
@@ -12,18 +12,48 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Fan You</div>
-<div class="menu-item"><a href="index.html">home</a></div>
-<div class="menu-item"><a href="bio.html">Biography</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html" class="current">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 </td>
 <td id="layout-content">
-<p>Research</p>
-<div id="footer">
-<div id="footer-text">
-Page generated 2018-09-27 14:56:27 MDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
-</div>
-</div>
+<h1>Research</h1>
+<h2>Working Papers</h2>
+<ul>
+<li><p>Thomas W.M. Vossen, Fan You, Dan Zhang, Finite-Horizon Approximate Linear Programs for an Infinite-Horizon Revenue Management Problem</p>
+</li>
+<li><p>Thomas W.M. Vossen, Fan You, An Approximate Dynamic Programming Approach to Dynamic Matching</p>
+</li>
+<li><p>Doug Popken, Fan You, Dan Zhang, Nudge Allocation in a Healthcare Analytics Application</p>
+</li>
+<li><p>Thomas W.M. Vossen, Fan You, Rui Zhang, Approximate Dynamic Programming Approaches for the Multidimensional Knapsack Problem</p>
+</li>
+</ul>
+<h2>Invited Talks</h2>
+<ul>
+<li><p>Colorado Data Science Team, Department of Computer Science, University of Colorado Boulder, December 2017</p>
+</li>
+<li><p>Statistics, Optimization and Machine Learning Seminar, University of Colorado Boulder, October 2017</p>
+</li>
+<li><p>Algorithmic Economics and Machine Learning Seminar, Department of Computer Science, University of Colorado Boulder, May 2017</p>
+</li>
+<li><p>Operations Management Workshop, Lees School of Business, University of Colorado Boulder, April 2017</p>
+</li>
+</ul>
+<h2>Conference Presentations</h2>
+<ul>
+<li><p>Finite-Horizon Approximate Linear Programs for an Infinite-Horizon Revenue Management Problem</p>
+<ul>
+<li><p>INFORMS RM Section Conference, Toronto, Canada, June 2018</p>
+</li>
+<li><p>INFORMS Optimization Society Conference, Denver, Colorado, March 2018</p>
+</li>
+<li><p>INFORMS Annual Meeting, Houston, Texas, October 2017</p>
+</li>
+</ul>
+
+</li>
+</ul>
 </td>
 </tr>
 </table>
