--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
 <h1>Fan You</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="files/copper.jpg" alt="FanPic" width="400px" />&nbsp;</td>
+<img src="files/profile.jpg" alt="Snowboarding Copper Mountain" width="420px" />&nbsp;</td>
 <td align="left"></td></tr></table>
-<p>Fan You, Ph.D. Student<br />
+<p>Fan You, Ph.D. Student in Operations Management<br />
 <a href="https://www.colorado.edu/business/">Leeds School of Business</a> <br />
 <a href="https://www.colordado.edu">University of Colorado Boulder</a> <br />
 Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Prof. Thoms Vossen</a> and      <a href="http://danzhang.com">Prof. Dan Zhang</a> <br />
 Email: <a href="mailto:Fan.You@Colorado.EDU">Fan.You@Colorado.EDU</a></p>
 <h2>News</h2>
 <ul>
-<li><p>I'll be presenting at the INFORMS Annual Meeting 2018 in Phoenix, AZ, November 2018</p>
+<li><p>I'll be presenting at the INFORMS Annual Meeting in Phoenix, AZ, November 2018</p>
 </li>
 </ul>
 <h2>Education</h2>
 <ul>
 <li><p>Ph.D. in Operations Management, <a href="https://colorado.edu">University of Colorado Boulder</a>, August 2016 - Present<br /></p>
 </li>
-<li><p>M.S in Operations Research, <a href="https://psu.edu">Penn State University</a>, August 2013 - December 2015<br /></p>
+<li><p>M.S. in Operations Research, <a href="https://psu.edu">Penn State University</a>, August 2013 - December 2015<br /></p>
 </li>
-<li><p>B.S in Industrial Engineering, <a href="http://en.uestc.edu.cn/">University of Electronic Science and Technology of China</a>, September 2009 - July 2013<br /></p>
+<li><p>B.S. in Industrial Engineering, <a href="http://en.uestc.edu.cn/">University of Electronic Science and Technology of China</a>, September 2009 - July 2013<br /></p>
 </li>
 </ul>
 <h2>Research Interest</h2>
