--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <td align="left"></td></tr></table>
 <p>Fan You, Ph.D. Student in Operations Management<br />
 <a href="https://www.colorado.edu/business/">Leeds School of Business</a> <br />
-<a href="https://www.colordado.edu">University of Colorado Boulder</a> <br />
+<a href="https://www.colorado.edu/">University of Colorado Boulder</a> <br />
 Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Prof. Thoms Vossen</a> and      <a href="http://danzhang.com">Prof. Dan Zhang</a> <br />
 Email: <a href="mailto:Fan.You@Colorado.EDU">Fan.You@Colorado.EDU</a></p>
 <h2>News</h2>
