--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <title>Fan You</title>
 </head>
 <body>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+    var pageTracker = _gat._getTracker("UA-126619984-1");
+    pageTracker._trackPageview();
+} catch(err) {}</script>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
@@ -27,7 +36,9 @@
 <a href="https://www.colorado.edu/business/">Leeds School of Business</a> <br />
 <a href="https://www.colorado.edu/">University of Colorado Boulder</a> <br />
 Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Prof. Thoms Vossen</a> and      <a href="http://danzhang.com">Prof. Dan Zhang</a> <br />
-Email: <a href="mailto:Fan.You@Colorado.EDU">Fan.You@Colorado.EDU</a></p>
+Email: <a href="mailto:Fan.You@Colorado.EDU">Fan.You@Colorado.EDU</a><br />
+Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a></p>
+<p><a href="https://www.github.com/fanyoucn"><img src="files/github.png" height="30px"  alt="github" /></a></p>
 <h2>News</h2>
 <ul>
 <li><p>I'll be presenting at the INFORMS Annual Meeting in Phoenix, AZ, November 2018</p>
