--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@ try {
 <li><p>Thomas W.M. Vossen, Fan You, Rui Zhang, Approximate Dynamic Programming Approaches for the Multidimensional Knapsack Problem</p>
 </li>
 </ul>
-<h2>Invited Talks/Seminars</h2>
+<h2>Invited Talks</h2>
 <ul>
 <li><p>Colorado Data Science Team, Department of Computer Science, University of Colorado Boulder, December 2017</p>
 </li>
