--- a/research.html
+++ b/research.html
@@ -29,11 +29,11 @@ try {
 <div id="toptitle">
 <h1>Research</h1>
 </div>
-<h2>Working Papers</h2>
+<h2>Work in Progress</h2>
 <ul>
 <li><p>Thomas W.M. Vossen, Fan You, Dan Zhang, Finite-Horizon Approximate Linear Programs for an Infinite-Horizon Revenue Management Problem</p>
 </li>
-<li><p>Thomas W.M. Vossen, Fan You, An Approximate Dynamic Programming Approach to Dynamic Matching</p>
+<li><p>Thomas W.M. Vossen, Fan You, An Approximate Dynamic Programming Approach to General Dynamic Matching</p>
 </li>
 <li><p>Doug Popken, Fan You, Dan Zhang, Nudge Allocation in a Healthcare Analytics Application</p>
 </li>
@@ -60,6 +60,17 @@ try {
 <li><p>INFORMS Optimization Society Conference, Denver, Colorado, March 2018</p>
 </li>
 <li><p>INFORMS Annual Meeting, Houston, Texas, October 2017</p>
+</li>
+<li><p>INFORMS Annual Meeting, Phoenix, Arizona, November 2018</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>An Approximate Dynamic Programming Approach to General Dynamic Matching</p>
+<ul>
+<li><p>INFORMS Annual Meeting, Phoenix, Arizona, November 2018</p>
 </li>
 </ul>
 
