--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ try {
 <table class="imgtable"><tr><td>
 <img src="files/profile.jpg" alt="Snowboarding Copper Mountain" width="420px" />&nbsp;</td>
 <td align="left"></td></tr></table>
-<p>Fan You, Ph.D. Student in Operations Management<br />
+<p>Fan You, Ph.D. Candidate in Operations Management<br />
 <a href="https://www.colorado.edu/business/">Leeds School of Business</a> <br />
 <a href="https://www.colorado.edu/">University of Colorado Boulder</a> <br />
 Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Prof. Thoms Vossen</a> and      <a href="http://danzhang.com">Prof. Dan Zhang</a> <br />
@@ -41,7 +41,7 @@ Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a></p>
 <p><a href="https://www.github.com/fanyoucn"><img src="files/github.png" height="30px"  alt="github" /></a></p>
 <h2>News</h2>
 <ul>
-<li><p>I'll be presenting at the INFORMS Annual Meeting in Phoenix, AZ, November 2018</p>
+<li><p>I passed my comprehensive exam and became a Ph.D. candidate!</p>
 </li>
 </ul>
 <h2>Education</h2>
