--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ try {
 <h1>Fan You</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="files/profile.jpg" alt="Snowboarding Copper Mountain" width="420px" />&nbsp;</td>
+<img src="files/11.png" alt="Snowboarding Copper Mountain" width="150px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 <p>Fan You, Ph.D. Candidate in Operations Management<br />
 <a href="https://www.colorado.edu/business/">Leeds School of Business</a> <br />
@@ -39,11 +39,6 @@ Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Prof. Thoms V
 Email: <a href="mailto:Fan.You@Colorado.EDU">Fan.You@Colorado.EDU</a><br />
 Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a></p>
 <p><a href="https://www.github.com/fanyoucn"><img src="files/github.png" height="30px"  alt="github" /></a></p>
-<h2>News</h2>
-<ul>
-<li><p>I passed my comprehensive exam and became a Ph.D. candidate!</p>
-</li>
-</ul>
 <h2>Education</h2>
 <ul>
 <li><p>Ph.D. in Operations Management, <a href="https://colorado.edu">University of Colorado Boulder</a>, August 2016 - Present<br /></p>
