--- a/research.html
+++ b/research.html
@@ -31,11 +31,11 @@ try {
 </div>
 <h2>Work in Progress</h2>
 <ul>
-<li><p>Thomas W.M. Vossen, Fan You, Dan Zhang, Finite-Horizon Approximate Linear Programs for an Infinite-Horizon Revenue Management Problem</p>
+<li><p>Thomas W.M. Vossen, Fan You, Dan Zhang, Finite-Horizon Approximate Linear Programs for Infinite-Horizon Markov Decision Processes</p>
 </li>
-<li><p>Thomas W.M. Vossen, Fan You, An Approximate Dynamic Programming Approach to General Dynamic Matching</p>
+<li><p>Thomas W.M. Vossen, Fan You, An Approximate Dynamic Programming Approach to Dynamic Matching</p>
 </li>
-<li><p>Doug Popken, Fan You, Dan Zhang, Nudge Allocation in a Healthcare Analytics Application</p>
+<li><p>Thomas W.M. Vossen, Fan You, The Dynamic Matchmaking Problem for Online Multiplayer Gaming</p>
 </li>
 <li><p>Thomas W.M. Vossen, Fan You, Rui Zhang, Approximate Dynamic Programming Approaches for the Multidimensional Knapsack Problem</p>
 </li>
@@ -48,28 +48,32 @@ try {
 </li>
 <li><p>Algorithmic Economics and Machine Learning Seminar, Department of Computer Science, University of Colorado Boulder, May 2017</p>
 </li>
-<li><p>Operations Management Workshop, Lees School of Business, University of Colorado Boulder, April 2017</p>
+<li><p>Operations Management Workshop, Leeds School of Business, University of Colorado Boulder, April 2017</p>
 </li>
 </ul>
 <h2>Conference Presentations</h2>
 <ul>
 <li><p>Finite-Horizon Approximate Linear Programs for an Infinite-Horizon Revenue Management Problem</p>
 <ul>
+<li><p>INFORMS Annual Meeting, Phoenix, Arizona, November 2018</p>
+</li>
 <li><p>INFORMS RM Section Conference, Toronto, Canada, June 2018</p>
+</li>
+<li><p>Mostly OM Workshop, Beijing, China, June 2018</p>
 </li>
 <li><p>INFORMS Optimization Society Conference, Denver, Colorado, March 2018</p>
 </li>
 <li><p>INFORMS Annual Meeting, Houston, Texas, October 2017</p>
-</li>
-<li><p>INFORMS Annual Meeting, Phoenix, Arizona, November 2018</p>
 </li>
 </ul>
 
 </li>
 </ul>
 <ul>
-<li><p>An Approximate Dynamic Programming Approach to General Dynamic Matching</p>
+<li><p>An Approximate Dynamic Programming Approach to Dynamic Matching</p>
 <ul>
+<li><p>INFORMS Annual Meeting, Seattle, Washington, October 2019</p>
+</li>
 <li><p>INFORMS Annual Meeting, Phoenix, Arizona, November 2018</p>
 </li>
 </ul>
