--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ try {
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="industry.html">Industry</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
