--- a/research.html
+++ b/research.html
@@ -24,6 +24,7 @@ try {
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html" class="current">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="industry.html">Industry</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -31,11 +32,13 @@ try {
 </div>
 <h2>Work in Progress</h2>
 <ul>
+<li><p>Fan You, Thomas W.M. Vossen, Dynamic Assortment Personalization with a Featured Section for a Multiplayer Online Game</p>
+</li>
 <li><p>Thomas W.M. Vossen, Fan You, Dan Zhang, Finite-Horizon Approximate Linear Programs for Infinite-Horizon Markov Decision Processes</p>
 </li>
-<li><p>Thomas W.M. Vossen, Fan You, An Approximate Dynamic Programming Approach to Dynamic Matching</p>
+<li><p>Fan You, Thomas W.M. Vossen, An Approximate Dynamic Programming Approach to Dynamic Matching</p>
 </li>
-<li><p>Thomas W.M. Vossen, Fan You, The Dynamic Matchmaking Problem for Online Multiplayer Gaming</p>
+<li><p>Fan You, Thomas W.M. Vossen, The Dynamic Matchmaking Problem for Online Multiplayer Gaming</p>
 </li>
 <li><p>Thomas W.M. Vossen, Fan You, Rui Zhang, Approximate Dynamic Programming Approaches for the Multidimensional Knapsack Problem</p>
 </li>
