2020 Oct Minor fix
minor fix

--- a/industry.html
+++ b/industry.html
@@ -22,9 +22,9 @@ try {
 <td id="layout-menu">
 <div class="menu-category">Fan You</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html" class="current">Research</a></div>
+<div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="industry.html">Industry</a></div>
+<div class="menu-item"><a href="industry.html" class="current">Industry</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
