--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@ Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a></p>
 <li><p>B.S. in Industrial Engineering, <a href="http://en.uestc.edu.cn/">University of Electronic Science and Technology of China</a>, September 2009 - July 2013<br /></p>
 </li>
 </ul>
+<h2>Industry Experience</h2>
+<ul>
+<li><p>Data Science Intern, <a href="https://www.activisionblizzard.com/home">Activision Blizzard</a>, March 2020 - Present<br /></p>
+</li>
+</ul>
 <h2>Research Interest</h2>
 <ul>
 <li><p>Approximate Dynamic Programming</p>
