--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@ try {
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="industry.html">Industry</a></div>
+<div class="menu-item"><a href="fun.html">Fun</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Fan You</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="files/11.png" alt="Snowboarding Copper Mountain" width="150px" />&nbsp;</td>
+<img src="files/11.png" alt="profile" width="150px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 <p>Fan You, Ph.D. Candidate in Operations Management<br />
 <a href="https://www.colorado.edu/business/">Leeds School of Business</a> <br />
 <a href="https://www.colorado.edu/">University of Colorado Boulder</a> <br />
 Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Prof. Thoms Vossen</a> and      <a href="http://danzhang.com">Prof. Dan Zhang</a> <br />
 Email: <a href="mailto:Fan.You@Colorado.EDU">Fan.You@Colorado.EDU</a><br />
-Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a></p>
-<p><a href="https://www.github.com/fanyoucn"><img src="files/github.png" height="30px"  alt="github" /></a></p>
+Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a>
+</p>
 <h2>Education</h2>
 <ul>
 <li><p>Ph.D. in Operations Management, <a href="https://colorado.edu">University of Colorado Boulder</a>, August 2016 - Present<br /></p>
@@ -51,16 +52,14 @@ Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a></p>
 </ul>
 <h2>Industry Experience</h2>
 <ul>
-<li><p>Data Science Intern, <a href="https://www.activisionblizzard.com/home">Activision Blizzard</a>, March 2020 - Present<br /></p>
+<li><p>Data Science Intern, <a href="https://www.activisionblizzard.com/home">Activision Blizzard</a>, March 2020 - May 2021</p>
 </li>
 </ul>
 <h2>Research Interest</h2>
 <ul>
-<li><p>Approximate Dynamic Programming</p>
+<li><p>Methodology: Integer Programming, Approximate Dynamic Programming, Approximation Algorithms</p>
 </li>
-<li><p>Revenue Management and Pricing</p>
-</li>
-<li><p>Combinatorial Optimization</p>
+<li><p>Application: Revenue Management and Pricing, Video Game Analytics</p>
 </li>
 </ul>
 </td>
