--- a/teaching.html
+++ b/teaching.html
@@ -25,6 +25,7 @@ try {
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
 <div class="menu-item"><a href="industry.html">Industry</a></div>
+<div class="menu-item"><a href="fun.html">Fun</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
