--- a/fun.html
+++ b/fun.html
@@ -32,7 +32,7 @@ try {
 <h1>Snowboarding</h1>
 </div>
 <ul>
-<li><p>Overall 100 days snowboarding during my PhD program</p>
+<li><p>Over 100 days snowboarding during my PhD program</p>
 </li>
 <li><p>Mountains that I've been to include: Aspen Snowmass, Vail, Steamboat, Beaver Creek, Keystone, Breckenridge, Arapahoe Basin, Copper Mountain, Winter Park, Loveland, Eldora, Northstar</p>
 </li>
@@ -46,7 +46,7 @@ try {
 </li>
 <li><p>There is &ldquo;OR&rdquo; in p<b>o</b>ke<b>r</b></p>
 </li>
-<li><p>I won a poker tournament in Las Vegas!</p>
+<li><p>I won a small poker tournament in Las Vegas!</p>
 </li>
 </ul>
 <table class="imgtable"><tr><td>
