--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ try {
 <table class="imgtable"><tr><td>
 <img src="files/11.png" alt="profile" width="150px" />&nbsp;</td>
 <td align="left"></td></tr></table>
-<p>Fan You, Ph.D. Candidate in Operations Management<br />
+<p>Fan You (尤凡), Ph.D. Candidate in Operations Management<br />
 <a href="https://www.colorado.edu/business/">Leeds School of Business</a> <br />
 <a href="https://www.colorado.edu/">University of Colorado Boulder</a> <br />
 Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Prof. Thoms Vossen</a> and      <a href="http://danzhang.com">Prof. Dan Zhang</a> <br />
