--- a/industry.html
+++ b/industry.html
@@ -34,24 +34,32 @@ try {
 <h2>Activision Blizzard - Data Science Intern</h2>
 <h3>Personalized Store Recommendation for Call of Duty: Modern Warfare</h3>
 <ul>
-<li><p>Capacitated Multinomial Logit Assortment Optimization </p>
+<li><p>Built a prototypical model for the purchase behaviors of gamers</p>
+</li>
+<li><p>Formulated an optimization problem for the revenue-maximizing recommendation system</p>
+</li>
+<li><p>Designed and implemented approximation algorithms for the NP-hard revenue optimization problem</p>
 </li>
 </ul>
 <h3>Anti-Cheat for Call of Duty: Warzone</h3>
 <ul>
-<li><p>Supervised Cheater Detection</p>
+<li><p>Worked with large data sets with information of over 50 million active players</p>
 </li>
-<li><p>Unspervised Anamoly Detection</p>
+<li><p>Built supervised cheater detection models and unsupervised anomaly detection models using Spark</p>
+</li>
+<li><p>Responsible for feature engineering, model training and deployment</p>
+</li>
+<li><p>Collaborated with the security team to periodically ban/shadow-ban cheaters</p>
 </li>
 </ul>
 <h3>Skill Metric System for Call of Duty: Warzone</h3>
 <ul>
-<li><p>Directed Graph Based Skill System</p>
+<li><p>Proposed a directed graph based skill system for the battle royale mode</p>
 </li>
 </ul>
 <h3>Dedicated Server Usage Optimization for Call of Duty: Modern Warfare</h3>
 <ul>
-<li><p>Region Level Latency and Demand Analysis</p>
+<li><p>Ad-hoc analysis of region level latency and deman</p>
 </li>
 </ul>
 </td>
