--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ try {
 <p>Fan You (尤凡), Ph.D. Candidate in Operations Management<br />
 <a href="https://www.colorado.edu/business/">Leeds School of Business</a> <br />
 <a href="https://www.colorado.edu/">University of Colorado Boulder</a> <br />
-Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Prof. Thoms Vossen</a> and      <a href="http://danzhang.com">Prof. Dan Zhang</a> <br />
+Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Dr. Thoms Vossen</a> <br />
+Dissertation Committee: <a href="http://danzhang.com">Dr. Dan Zhang</a>, <a href="http://rui-zhang.org">Dr. Rui Zhang</a>, <a href="https://huananzhang.mystrikingly.com">Dr. Huanan Zhang</a>, <a href="https://www.colorado.edu/faculty/laguna">Dr. Manuel Laguna</a>, <a href="https://www.spencerstirling.com">Dr. Spencer Stirling</a> <br />
 Email: <a href="mailto:Fan.You@Colorado.EDU">Fan.You@Colorado.EDU</a><br />
 Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a>
 </p>
@@ -57,9 +58,9 @@ Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a>
 </ul>
 <h2>Research Interest</h2>
 <ul>
-<li><p>Methodology: Integer Programming, Approximate Dynamic Programming, Approximation Algorithms</p>
+<li><p>Methodology: Approximate Dynamic Programming, Integer Programming, Approximation Algorithms</p>
 </li>
-<li><p>Application: Revenue Management and Pricing, Video Game Analytics</p>
+<li><p>Application: Revenue Management and Pricing, Video Game Analytics, Matching Markets</p>
 </li>
 </ul>
 </td>
