--- a/industry.html
+++ b/industry.html
@@ -45,7 +45,7 @@ try {
 <ul>
 <li><p>Worked with large data sets with information of over 50 million active players</p>
 </li>
-<li><p>Built supervised cheater detection models and unsupervised anomaly detection models using Spark</p>
+<li><p>Built supervised cheater detection models (gradient boosting tree) and unsupervised anomaly detection models (autoencoder) using Spark</p>
 </li>
 <li><p>Responsible for feature engineering, model training and deployment</p>
 </li>
