--- a/teaching.html
+++ b/teaching.html
@@ -34,9 +34,9 @@ try {
 <h2>Instructor</h2>
 <h3>University of Colorado Boulder</h3>
 <ul>
-<li><p>[BUSM 3021] Business Analytics, Fall 2018, Spring 2019</p>
+<li><p>[MGMT 3100] Operations Management, Summer 2018 (4.7/6), Summer 2019 (5.2/6)</p>
 </li>
-<li><p>[MGMT 3100] Operations Management, Summer 2018, Summer 2019</p>
+<li><p>[BUSM 3021] Business Analytics, Fall 2018, Spring 2019</p>
 </li>
 </ul>
 <h2>Teaching Assistant</h2>
