ijoc status update

--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@ try {
 </ul>
 <h2>An Approximate Dynamic Programming Approach to Dynamic Stochastic Matching</h2>
 <ul>
-<li><p>with <b>Thomas W.M. Vossen</b>, under review at <i>INFORMS Journal on Computing</i></p>
+<li><p>with <b>Thomas W.M. Vossen</b>, under major revision at <i>INFORMS Journal on Computing</i></p>
 </li>
 <li><p>We consider dynamic matching problems, where agents arrive and depart randomly over time and the objective is to maximize the total matching reward over a finite planning horizon. Such problems arise in a variety of settings, with applications ranging from ridesharing and online video games to kidney exchange. We propose a general framework for such problems that can accommodate a number of important problem characteristics, and is flexible with regard to the nature of agent compatibilities, possible restrictions on the matchings allowed, and the potential for matching failures. We solve the resulting problems using the linear programming-based approach to approximate dynamic programming, given that their Markov Decision Process (MDP) representations are intractable. A major challenge with this approach is the size of the resulting approximate linear programs (ALPs), which can pose a significant computational burden. We show that the ALPs allow for a compact linear programming formulation that can be solved efficiently. The ALPs provide both upper bounds on the expected reward, and can be used to construct heuristic control policies.  We test our approach numerically on synthetic online video game matchmaking instances, as well as dynamic kidney exchange instances and ridesharing instances taken from the literature</p>
 </li>
