--- a/fun.html
+++ b/fun.html
@@ -46,11 +46,14 @@ try {
 </li>
 <li><p>There is &ldquo;OR&rdquo; in p<b>o</b>ke<b>r</b></p>
 </li>
-<li><p>I won a small poker tournament in Las Vegas!</p>
+<li><p>I won a couple of poker tournaments in Las Vegas!</p>
 </li>
 </ul>
 <table class="imgtable"><tr><td>
-<img src="files/tournament_winner.png" alt="poker" width="350px" />&nbsp;</td>
+<img src="files/tournament_winner.png" alt="poker1" width="350px" />&nbsp;</td>
+<td align="left"></td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="files/tourney2.jpg" alt="poker2" width="350px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 </td>
 </tr>
