--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@ try {
 <table class="imgtable"><tr><td>
 <img src="files/11.png" alt="profile" width="150px" />&nbsp;</td>
 <td align="left"></td></tr></table>
-<p>Fan You (尤凡), Ph.D. Candidate in Operations Management<br />
+<p>Fan You (尤凡), Ph.D. in Operations Management<br />
 <a href="https://www.colorado.edu/business/">Leeds School of Business</a> <br />
 <a href="https://www.colorado.edu/">University of Colorado Boulder</a> <br />
 Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Dr. Thoms Vossen</a> <br />
-Dissertation Committee: <a href="http://danzhang.com">Dr. Dan Zhang</a>, <a href="http://rui-zhang.org">Dr. Rui Zhang</a>, <a href="https://huananzhang.mystrikingly.com">Dr. Huanan Zhang</a>, <a href="https://www.colorado.edu/faculty/laguna">Dr. Manuel Laguna</a>, <a href="https://www.spencerstirling.com">Dr. Spencer Stirling</a> <br />
 Email: <a href="mailto:Fan.You@Colorado.EDU">Fan.You@Colorado.EDU</a><br />
 Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a>
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D. in Operations Management, <a href="https://colorado.edu">University of Colorado Boulder</a>, August 2016 - Present<br /></p>
+<li><p>Ph.D. in Operations Management, <a href="https://colorado.edu">University of Colorado Boulder</a>, August 2016 - July 2022<br /></p>
 </li>
 <li><p>M.S. in Operations Research, <a href="https://psu.edu">Penn State University</a>, August 2013 - December 2015<br /></p>
 </li>
@@ -53,6 +52,8 @@ Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a>
 </ul>
 <h2>Industry Experience</h2>
 <ul>
+<li><p>Applied Scientist, <a href="https://www.uber.com/us/en/careers/teams/data-science/">Uber Applied Science</a>, August 2022 - Present</p>
+</li>
 <li><p>Data Science Intern, <a href="https://www.activisionblizzard.com/home">Activision Blizzard</a>, March 2020 - May 2021</p>
 </li>
 </ul>
