--- a/industry.html
+++ b/industry.html
@@ -31,6 +31,8 @@ try {
 <div id="toptitle">
 <h1>Industry Experience</h1>
 </div>
+<h2>Uber Technologies - Applied Scientist</h2>
+<h3>Rider Surge Pricing</h3>
 <h2>Activision Blizzard - Data Science Intern</h2>
 <h3>Personalized Store Recommendation for Call of Duty: Modern Warfare</h3>
 <ul>
