--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@ try {
 <a href="https://www.colorado.edu/">University of Colorado Boulder</a> <br />
 Advisor: <a href="https://www.colorado.edu/business/thomas-vossen">Dr. Thoms Vossen</a> <br />
 Email: <a href="mailto:Fan.You@Colorado.EDU">Fan.You@Colorado.EDU</a><br />
-Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a>
-</p>
+Webpage: <a href="http://fanyou.me">http://www.fanyou.me/</a> <br />
+
+My Erdős number is 4</p>
 <h2>Education</h2>
 <ul>
 <li><p>Ph.D. in Operations Management, <a href="https://colorado.edu">University of Colorado Boulder</a>, August 2016 - July 2022<br /></p>
