--- a/fun.html
+++ b/fun.html
@@ -32,9 +32,9 @@ try {
 <h1>Snowboarding</h1>
 </div>
 <ul>
-<li><p>Over 100 days snowboarding during my PhD program</p>
+<li><p>Over 100 days snowboarding</p>
 </li>
-<li><p>Mountains that I've been to include: Aspen Snowmass, Vail, Steamboat, Beaver Creek, Keystone, Breckenridge, Arapahoe Basin, Copper Mountain, Winter Park, Loveland, Eldora, Northstar</p>
+<li><p>Mountains that I've been to include: Aspen Snowmass, Vail, Steamboat, Beaver Creek, Keystone, Breckenridge, Arapahoe Basin, Copper Mountain, Winter Park, Loveland, Eldora, Northstar, Heavenly, Kirkwood, Palisades</p>
 </li>
 </ul>
 <table class="imgtable"><tr><td>
@@ -42,7 +42,7 @@ try {
 <td align="left"></td></tr></table>
 <h1>Poker</h1>
 <ul>
-<li><p>I play Texas Hold'em regularly with friends and family</p>
+<li><p>I play Texas Hold'em regularly with friends</p>
 </li>
 <li><p>There is &ldquo;OR&rdquo; in p<b>o</b>ke<b>r</b></p>
 </li>
