--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@ try {
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="industry.html">Industry</a></div>
-<div class="menu-item"><a href="fun.html">Fun</a></div>
+<div class="menu-item"><a href="poker.html">Poker</a></div>
+<div class="menu-item"><a href="racing.html">Racing</a></div>
+<div class="menu-item"><a href="snowboarding.html">Snowboarding</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
