--- a/industry.html
+++ b/industry.html
@@ -7,17 +7,14 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Industry Experience</title>
 </head>
-<body>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-    var pageTracker = _gat._getTracker("UA-126619984-1");
-    pageTracker._trackPageview();
-} catch(err) {}</script>
-<table summary="Table for page layout." id="tlayout">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V2G98TB4NT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V2G98TB4NT');
+</script><table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Fan You</div>
