--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   gtag('js', new Date());
 
   gtag('config', 'G-V2G98TB4NT');
-</script><table summary="Table for page layout." id="tlayout">
+</script>
+<table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Fan You</div>
