matching paper update

--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@
 </ul>
 <h2>An Approximate Dynamic Programming Approach to Dynamic Stochastic Matching</h2>
 <ul>
-<li><p>with <b>Thomas W.M. Vossen</b>, under major revision at <i>INFORMS Journal on Computing</i></p>
+<li><p>with <b>Thomas W.M. Vossen</b>, under minor revision at <i>INFORMS Journal on Computing</i></p>
 </li>
 <li><p>Dynamic stochastic matching problems arise in a variety of recent applications, ranging from ridesharing and online video games to kidney exchange. Such problems are naturally formulated as Markov decision processes (MDPs) that are, however, intractable in general. To improve tractability, we investigate the linear programming-based approach to approximate dynamic programming. This approach can provide both feasible control policies and bounds on the MDPs’ optimal policy value, which can be used to establish optimality gaps. Still, the approximate linear programs (ALPs) resulting from this approach can often be difficult to solve. To address this computational challenge, we derive novel ALP reformulations that can be used for a broad class of dynamic stochastic matching problems that incorporate, among others, possible match failures and certain restrictions on feasible matchings. We show that these ALP reformulations can be solved efficiently and applied to a broad class of dynamic matching problems. In addition, our numerical results indicate that our ALP reformulations can produce tight bounds that allow us to establish nearoptimal policy performance for a broad set of problem instances. Thus, ALP reformulations can present an attractive alternative for applications that involve dynamic stochastic matching.</p>
 </li>
