--- a/racing.html
+++ b/racing.html
@@ -36,18 +36,18 @@
 </li>
 <li><p>My track car: 2022 Hyundai Veloster N DCT</p>
 <ul>
-<li><p>Mods: Enkei RPF1 wheels, Hankook RS4 tires, rear sway-bar, Pagid RSL2 brake pads, oil cooler</p>
+<li><p>Mods: Enkei RPF1 wheels, rear sway-bar, Pagid RSL2 brake pads, oil cooler</p>
 </li></ul>
 </li>
 <li><p>Personal Best Lap Times</p>
 <ul>
-<li><p>Thunderhill West CCW: 1:30.3, July 2023</p>
+<li><p>Thunderhill West CCW: 1:30.3, July 2023 (245 Hankook RS4)</p>
 </li>
-<li><p>Thunderhill East Bypass: 2:11.9, April 2023</p>
+<li><p>Thunderhill East Bypass: 2:11.9, April 2023 (245 Hankook RS4)</p>
 </li>
-<li><p>Sonoma: 1:59.5, May 2023</p>
+<li><p>Sonoma: 1:57.7, May 2023 (225 Federal 201M)</p>
 </li>
-<li><p>Laguna Seca: 1:47.5, August 2023</p>
+<li><p>Laguna Seca: 1:47.5, August 2023 (245 Hankook RS4)</p>
 </li>
 </ul>
 
