--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <h1>Fan You</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="files/11.png" alt="profile" width="150px" />&nbsp;</td>
+<img src="files/wsop.jpeg" alt="profile" width="400px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 <p>Fan You (尤凡), Ph.D. in Operations Management<br />
 <a href="https://www.colorado.edu/business/">Leeds School of Business</a> <br />
