--- a/poker.html
+++ b/poker.html
@@ -32,32 +32,34 @@
 <h1>Poker</h1>
 </div>
 <ul>
-<li><p>I play Texas Hold'em regularly, mostly tournaments and occasionally home cash games</p>
+<li><p><font color=red size=+0.5><b>WSOP Circuit Event Champion</b></font> (<a href="https://thundervalleyresort.com/casino/poker/blog/october-2023/you-came-back-to-win"><font color=blue size=+0.0>Link</font></a>) </p>
+</li>
+<li><p>Total live earnings: $83,300</p>
 </li>
 <li><p>There is &ldquo;OR&rdquo; in p<b>o</b>ke<b>r</b></p>
-</li>
-<li><p>Total live earnings: $7200</p>
 </li>
 </ul>
 <h1>Tournament History</h1>
 <ul>
-<li><p>July 2021, South Point, Las Vegas, NV, 1st/83 players, $1000</p>
+<li><p>October 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>1st/1,559</b></font> players, $76,100</p>
 </li>
-<li><p>November 2021, Sahara, Las Vegas, NV, 1st/64 players, $700</p>
+<li><p>July 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>66th/1,605</b></font> players, $1700</p>
 </li>
-<li><p>December 2021, Carson Valley Inn, Mindon, NV, 2nd/20 players, $200</p>
+<li><p>June 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>7th/230</b></font> players, $1200</p>
 </li>
-<li><p>June 2022, South Point, Las Vegas, NV, 22nd/182 players, $100</p>
+<li><p>December 2022, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>5th/180</b></font> players, $1300</p>
 </li>
-<li><p>September 2022, South Point, Las Vegas, NV, 1st/69 players, $700</p>
+<li><p>November 2022, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>22nd/120</b></font> players, $300</p>
 </li>
-<li><p>November 2022, Thunder Valley, Lincoln, CA, 22nd/160 players, $300</p>
+<li><p>September 2022, South Point, Las Vegas, NV, <font color=blue size=+0.5><b>1st/69</b></font> players, $700</p>
 </li>
-<li><p>December 2022, Thunder Valley, Lincoln, CA, 5th/180 players, $1300</p>
+<li><p>June 2022, South Point, Las Vegas, NV, <font color=blue size=+0.5><b>22nd/182</b></font> players, $100</p>
 </li>
-<li><p>June 2023, Thunder Valley, Lincoln, CA, 7th/230 players, $1200</p>
+<li><p>December 2021, Carson Valley Inn, Mindon, NV, <font color=blue size=+0.5><b>2nd/20</b></font> players, $200</p>
 </li>
-<li><p>July 2023, Thunder Valley, Lincoln, CA, 66th/1605 players, $1700</p>
+<li><p>November 2021, Sahara, Las Vegas, NV, <font color=blue size=+0.5><b>1st/64</b></font> players, $700</p>
+</li>
+<li><p>July 2021, South Point, Las Vegas, NV, <font color=blue size=+0.5><b>1st/83</b></font> players, $1000</p>
 </li>
 </ul>
 <table class="imgtable"><tr><td>
