WSOP link update

--- a/poker.html
+++ b/poker.html
@@ -32,7 +32,7 @@
 <h1>Poker</h1>
 </div>
 <ul>
-<li><p><font color=red size=+0.5><b>WSOP Circuit Event Champion</b></font> (<a href="https://thundervalleyresort.com/casino/poker/blog/october-2023/you-came-back-to-win"><font color=blue size=+0.0>Link</font></a>) </p>
+<li><p><font color=red size=+0.5><b>WSOP Circuit Event Champion</b></font> (<a href="https://www.wsop.com/tournaments/updates/?aid=1&amp;grid=5315&amp;tid=22362&amp;rr=-1"><font color=blue size=+0.0>Link</font></a>) </p>
 </li>
 <li><p>Total live earnings: $83,300</p>
 </li>
