WSOP circuit 2023 Thunder Valley main event update

--- a/poker.html
+++ b/poker.html
@@ -34,13 +34,15 @@
 <ul>
 <li><p><font color=red size=+0.5><b>WSOP Circuit Event Champion</b></font> (<a href="https://www.wsop.com/tournaments/updates/?aid=1&amp;grid=5315&amp;tid=22362&amp;rr=-1"><font color=blue size=+0.0>Link</font></a>) </p>
 </li>
-<li><p>Total live earnings: $83,300</p>
+<li><p>Total live earnings: $103,900</p>
 </li>
 <li><p>There is &ldquo;OR&rdquo; in p<b>o</b>ke<b>r</b></p>
 </li>
 </ul>
 <h1>Tournament History</h1>
 <ul>
+<li><p>October 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>8th/594</b></font> players, $20,600</p>
+</li>
 <li><p>October 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>1st/1,559</b></font> players, $76,100</p>
 </li>
 <li><p>July 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>66th/1,605</b></font> players, $1700</p>
