--- a/poker.html
+++ b/poker.html
@@ -34,13 +34,23 @@
 <ul>
 <li><p><font color=red size=+0.5><b>WSOP Circuit Event Champion</b></font> (<a href="https://www.wsop.com/tournaments/updates/?aid=1&amp;grid=5315&amp;tid=22362&amp;rr=-1"><font color=blue size=+0.0>Link</font></a>) </p>
 </li>
-<li><p>Total live earnings: $103,900</p>
+<li><p>Total live earnings: $112,000</p>
 </li>
 <li><p>There is &ldquo;OR&rdquo; in p<b>o</b>ke<b>r</b></p>
 </li>
 </ul>
 <h1>Tournament History</h1>
 <ul>
+<li><p>Janurary 2024, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>13th/172</b></font> players, $900</p>
+</li>
+<li><p>Janurary 2024, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>50th/209</b></font> players, $1,200</p>
+</li>
+<li><p>Janurary 2024, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>19th/200</b></font> players, $500</p>
+</li>
+<li><p>December 2023, Venetian, Las Vegas, NV, <font color=blue size=+0.5><b>3rd/100</b></font> players, $4,200</p>
+</li>
+<li><p>December 2023, Venetian, Las Vegas, NV, <font color=blue size=+0.5><b>58th/538</b></font> players, $1,300</p>
+</li>
 <li><p>October 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>8th/594</b></font> players, $20,600</p>
 </li>
 <li><p>October 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>1st/1,559</b></font> players, $76,100</p>
