--- a/racing.html
+++ b/racing.html
@@ -34,20 +34,36 @@
 <ul>
 <li><p>I recently started high performance track driving</p>
 </li>
-<li><p>My track car: 2022 Hyundai Veloster N DCT</p>
+<li><p>My 1st track car: 2022 Hyundai Veloster N DCT</p>
 <ul>
 <li><p>Mods: Enkei RPF1 wheels, rear sway-bar, Pagid RSL2 brake pads, oil cooler</p>
 </li></ul>
 </li>
 <li><p>Personal Best Lap Times</p>
 <ul>
-<li><p>Thunderhill West CCW: 1:30.3, July 2023 (245 Hankook RS4)</p>
-</li>
-<li><p>Thunderhill East Bypass: 2:11.9, April 2023 (245 Hankook RS4)</p>
-</li>
 <li><p>Sonoma: 1:57.7, September 2023 (225 Federal 201M)</p>
 </li>
-<li><p>Laguna Seca: 1:47.5, August 2023 (245 Hankook RS4)</p>
+<li><p>Laguna Seca: 1:45.9, December 2023 (225 Federal 201M)</p>
+</li>
+<li><p>Thunderhill West CCW: 1:30.3, July 2023 (245 Hankook RS4)</p>
+</li>
+<li><p>Thunderhill East Bypass: 2:07.7, December 2023 (225 Federal 201M)</p>
+</li>
+<li><p>Thunderhill East Cyclone: 2:09.6, December 2023 (225 Federal 201M)</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>My 2nd track car: 2014 Mazda Miata Club</p>
+<ul>
+<li><p>Mods: Ohlins DFV coilovers, Whitelines swaybars, Konig Hypergram wheels, Nankang CRS tires, Hawk DTC60 brake pads, Hard Dog roll bar</p>
+</li></ul>
+</li>
+<li><p>Personal Best Lap Times</p>
+<ul>
+<li><p>Laguna Seca: 1:51.9, Feburary 2024 (225 Nankang CRS, Wet)</p>
 </li>
 </ul>
 
