--- a/poker.html
+++ b/poker.html
@@ -34,13 +34,15 @@
 <ul>
 <li><p><font color=red size=+0.5><b>WSOP Circuit Event Champion</b></font> (<a href="https://www.wsop.com/tournaments/updates/?aid=1&amp;grid=5315&amp;tid=22362&amp;rr=-1"><font color=blue size=+0.0>Link</font></a>) </p>
 </li>
-<li><p>Total live earnings: $112,000</p>
+<li><p>Total live earnings: $114,000</p>
 </li>
 <li><p>There is &ldquo;OR&rdquo; in p<b>o</b>ke<b>r</b></p>
 </li>
 </ul>
 <h1>Tournament History</h1>
 <ul>
+<li><p>May 2024, Commerce Casino, Los Angeles, CA, <font color=blue size=+0.5><b>18th/522</b></font> players, $1900</p>
+</li>
 <li><p>Janurary 2024, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>13th/172</b></font> players, $900</p>
 </li>
 <li><p>Janurary 2024, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>50th/509</b></font> players, $1,200</p>
