--- a/racing.html
+++ b/racing.html
@@ -58,12 +58,14 @@
 <ul>
 <li><p>My 2nd track car: 2014 Mazda Miata Club</p>
 <ul>
-<li><p>Mods: Ohlins DFV coilovers, Whitelines swaybars, Konig Hypergram wheels, Nankang CRS tires, Hawk DTC60 brake pads, Hard Dog roll bar</p>
+<li><p>Mods: Ohlins DFV coilovers, Whitelines swaybars, Apex VS5RS wheels, Hawk DTC60 brake pads, Hard Dog roll bar</p>
 </li></ul>
 </li>
 <li><p>Personal Best Lap Times</p>
 <ul>
-<li><p>Laguna Seca: 1:51.9, Feburary 2024 (225 Nankang CRS, Wet)</p>
+<li><p>Laguna Seca: 1:46.2, April 2024 (255 RE71RS)</p>
+</li>
+<li><p>Sonoma: 1:57.3, March 2024 (255 RE71RS)</p>
 </li>
 </ul>
 
