--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@ My Erdős number is 4</p>
 </ul>
 <h2>Industry Experience</h2>
 <ul>
-<li><p>Applied Scientist, <a href="https://www.uber.com/us/en/careers/teams/data-science/">Uber Applied Science</a>, August 2022 - Present</p>
+<li><p>Software Engineer - Optimization, May 2024 - present</p>
+</li>
+<li><p>Applied Scientist, <a href="https://www.uber.com/us/en/careers/teams/data-science/">Uber Applied Science</a>, August 2022 - May 2024</p>
 </li>
 <li><p>Data Science Intern, <a href="https://www.activisionblizzard.com/home">Activision Blizzard</a>, March 2020 - May 2021</p>
 </li>
