--- a/poker.html
+++ b/poker.html
@@ -34,14 +34,20 @@
 <ul>
 <li><p><font color=red size=+0.5><b>WSOP Circuit Event Champion</b></font> (<a href="https://www.wsop.com/tournaments/updates/?aid=1&amp;grid=5315&amp;tid=22362&amp;rr=-1"><font color=blue size=+0.0>Link</font></a>) </p>
 </li>
-<li><p>Total live earnings: $114,000</p>
+<li><p>Total live earnings: $125,000</p>
 </li>
 <li><p>There is &ldquo;OR&rdquo; in p<b>o</b>ke<b>r</b></p>
 </li>
 </ul>
 <h1>Tournament History</h1>
 <ul>
-<li><p>May 2024, Commerce Casino, Los Angeles, CA, <font color=blue size=+0.5><b>18th/522</b></font> players, $1900</p>
+<li><p>August 2024, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>7th/117</b></font> players, $3,500</p>
+</li>
+<li><p>July 2024, Bay 101 Casino, San Jose, CA, <font color=blue size=+0.5><b>5th/180</b></font> players, $7,800</p>
+</li>
+<li><p>May 2024, Commerce Casino, Los Angeles, CA, <font color=blue size=+0.5><b>18th/522</b></font> players, $1,900</p>
+</li>
+<li><p>Feburary 2024, Graton Casino, Rohnert Park, CA, <font color=blue size=+0.5><b>35th/672</b></font> players, $1,200</p>
 </li>
 <li><p>Janurary 2024, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>13th/172</b></font> players, $900</p>
 </li>
@@ -57,11 +63,11 @@
 </li>
 <li><p>October 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>1st/1,559</b></font> players, $76,100</p>
 </li>
-<li><p>July 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>66th/1,605</b></font> players, $1700</p>
+<li><p>July 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>66th/1,605</b></font> players, $1,700</p>
 </li>
-<li><p>June 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>7th/230</b></font> players, $1200</p>
+<li><p>June 2023, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>7th/230</b></font> players, $1,200</p>
 </li>
-<li><p>December 2022, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>5th/180</b></font> players, $1300</p>
+<li><p>December 2022, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>5th/180</b></font> players, $1,300</p>
 </li>
 <li><p>November 2022, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>22nd/120</b></font> players, $300</p>
 </li>
@@ -73,7 +79,7 @@
 </li>
 <li><p>November 2021, Sahara, Las Vegas, NV, <font color=blue size=+0.5><b>1st/64</b></font> players, $700</p>
 </li>
-<li><p>July 2021, South Point, Las Vegas, NV, <font color=blue size=+0.5><b>1st/83</b></font> players, $1000</p>
+<li><p>July 2021, South Point, Las Vegas, NV, <font color=blue size=+0.5><b>1st/83</b></font> players, $1,000</p>
 </li>
 </ul>
 <table class="imgtable"><tr><td>
