--- a/poker.html
+++ b/poker.html
@@ -34,14 +34,16 @@
 <ul>
 <li><p><font color=red size=+0.5><b>WSOP Circuit Event Champion</b></font> (<a href="https://www.wsop.com/tournaments/updates/?aid=1&amp;grid=5315&amp;tid=22362&amp;rr=-1"><font color=blue size=+0.0>Link</font></a>) </p>
 </li>
-<li><p>Total live earnings: $129,000</p>
+<li><p>Total live earnings: $130,000</p>
 </li>
 <li><p>There is &ldquo;OR&rdquo; in p<b>o</b>ke<b>r</b></p>
 </li>
 </ul>
 <h1>Tournament History</h1>
 <ul>
-<li><p>August 2024, Luck Chances Casion, Colma, CA, <font color=blue size=+0.5><b>6th/187</b></font> players, $4,100</p>
+<li><p>August 2024, Graton Casino, Rohnert Park, CA, <font color=blue size=+0.5><b>25th/333</b></font> players, $1,000</p>
+</li>
+<li><p>August 2024, Lucky Chances Casion, Colma, CA, <font color=blue size=+0.5><b>6th/187</b></font> players, $4,100</p>
 </li>
 <li><p>August 2024, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>7th/117</b></font> players, $3,500</p>
 </li>
