--- a/poker.html
+++ b/poker.html
@@ -43,7 +43,7 @@
 <ul>
 <li><p>August 2024, Graton Casino, Rohnert Park, CA, <font color=blue size=+0.5><b>25th/333</b></font> players, $1,000</p>
 </li>
-<li><p>August 2024, Lucky Chances Casion, Colma, CA, <font color=blue size=+0.5><b>6th/187</b></font> players, $4,100</p>
+<li><p>August 2024, Lucky Chances Casino, Colma, CA, <font color=blue size=+0.5><b>6th/187</b></font> players, $4,100</p>
 </li>
 <li><p>August 2024, Thunder Valley, Lincoln, CA, <font color=blue size=+0.5><b>7th/117</b></font> players, $3,500</p>
 </li>
